tests/fixtures/valid/hidden_app.desktop
[Desktop Entry]
Type=Application
Name=Hidden Application
Exec=hidden-app
Hidden=true
NoDisplay=true
Comment=This application is hidden from menus
