tests/fixtures/invalid/missing_name.desktop
[Desktop Entry]
Type=Application
Exec=missing-name-app
